name:                ISMISViewer
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/adrianparvino/ISMISViewer#readme
license:             GPL-3
license-file:        LICENSE
author:              Adrian Parvin D. Ouano
maintainer:          adrianparvino@gmail.com
copyright:           2017 Adrian Parvin D. Ouano
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable ISMISViewer
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , blaze-html
                     , clay
                     , mime-types
                     , text
                     , font-awesome-type
                     , gtk3
                     , webkitgtk3
                     , Spock
                     , ISMISViewer
  other-modules:       Paths_ISMISViewer
  default-language:    Haskell2010

test-suite simple-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ISMISViewer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adrianparvino/ISMISViewer
